--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/songFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.godwin.testmusic.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/songFragment"
+        android:name="com.godwin.saltmusic.ui.fragments.songs.SongsFragment"
+        android:label="@string/songs"
+        tools:layout="@layout/fragment_songs">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/actionSongsToDetails"
+            app:destination="@+id/detailFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.godwin.testmusic.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
+        android:id="@+id/albumFragment"
+        android:name="com.godwin.saltmusic.ui.fragments.album.AlbumFragment"
+        android:label="@string/albums"
+        tools:layout="@layout/fragment_songs">
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/actionAlbumToDetails"
+            app:destination="@+id/detailFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+    </fragment>
+    <fragment
+        android:id="@+id/artistFragment"
+        android:name="com.godwin.saltmusic.ui.fragments.artist.ArtistFragment"
+        android:label="@string/artists"
+        tools:layout="@layout/fragment_songs">
+        <action
+            android:id="@+id/actionArtistToDetails"
+            app:destination="@+id/detailFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+    </fragment>
+    <fragment
+        android:id="@+id/playlistFragment"
+        android:name="com.godwin.saltmusic.ui.fragments.playlist.PlaylistFragment"
+        android:label="@string/favourite"
+        tools:layout="@layout/fragment_songs">
+        <action
+            android:id="@+id/actionFavToDetails"
+            app:destination="@+id/detailFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.godwin.saltmusic.ui.fragments.detail.DetailsFragment"
+        android:label="@string/playlists"
+        tools:layout="@layout/fragment_details">
+
     </fragment>
 </navigation>
