--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#838383</color>
+    <color name="dark_gray">#575656</color>
+    <color name="text_dark_gray">#424242</color>
+    <color name="red">#FF3939</color>
+    <color name="red_fade">#BA2828</color>
 </resources>
